Trying to fix issue where navbar covers content on mobile

--- a/style.css
+++ b/style.css
@@ -179,10 +179,22 @@ hr{
     object-fit: cover !important;
     background-position: 50% 50%;
   }
+
+  .navbar-fixed-top {
+      position: relative;
+      top: auto;
+  }
+  .navbar-collapse {
+      max-height: none;
+  }
+  body {
+      margin: 0;
+  }
 }
 @media (max-width: 576px) {
   body{
     scroll-padding-top: 20%;
+    margin: 0;
   }
   .storefront:before {
     height: 154px;
@@ -230,6 +242,14 @@ hr{
     background-size: cover;
     object-fit: cover !important;
     background-position: 50% 50%;
+  }
+
+  .navbar-fixed-top {
+    position: relative;
+    top: auto;
+  }
+  .navbar-collapse {
+      max-height: none;
   }
 }
 
